--- a/server/.env.example
+++ b/server/.env.example
@@ -1,9 +1,9 @@
 # Auth0 — API configuration
 AUTH0_AUDIENCE=voxidria
-AUTH0_ISSUER_BASE_URL=https://your-tenant.auth0.com/
+AUTH0_ISSUER_BASE_URL=https://alexou.ca.auth0.com/
 
 # Google Gemini API key (optional — falls back to built-in explanations)
-GEMINI_API_KEY=
+GEMINI_API_KEY=AIzaSyBXm9TTABK6dd5GltghYxpH5alLui8mk0o
 
 # Server
 PORT=3001
