Update Supabase, Gemini, and ElevenLabs API keys

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -35,7 +35,7 @@ AUTH0_WEBHOOK_SECRET=
 # -----------------------------------------------------------------------------
 
 # Your Supabase project URL (found in Project Settings > API > Project URL)
-SUPABASE_URL=https://your-project-ref.supabase.co
+SUPABASE_URL=https:https://ugmgrncvxkeaazzwizki.supabase.co
 
 # Service Role key — server-side ONLY. Never send this to the browser.
 # Found in: Project Settings > API > Project API keys > service_role
@@ -51,7 +51,7 @@ SUPABASE_ANON_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsI
 # -----------------------------------------------------------------------------
 
 # Gemini API key
-GEMINI_API_KEY=AIza...your-gemini-key...
+GEMINI_API_KEY=AIzaSyBXm9TTABK6dd5GltghYxpH5alLui8mk0o
 
 # Model to use for reading analysis (gemini-1.5-pro recommended for accuracy)
 GEMINI_MODEL=gemini-1.5-pro
@@ -62,7 +62,7 @@ GEMINI_MODEL=gemini-1.5-pro
 # -----------------------------------------------------------------------------
 
 # ElevenLabs API key
-ELEVENLABS_API_KEY=sk_...your-elevenlabs-key...
+ELEVENLABS_API_KEY=sk_b65a885752f372296bb85188ebc2114a48fb5f34f9d34635
 
 # Voice ID to use for TTS — find in ElevenLabs > Voices (e.g., Rachel = 21m00Tcm4TlvDq8ikWAM)
 ELEVENLABS_VOICE_ID=21m00Tcm4TlvDq8ikWAM
