Fix SUPABASE_URL format in .env.example

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -35,7 +35,7 @@ AUTH0_WEBHOOK_SECRET=
 # -----------------------------------------------------------------------------
 
 # Your Supabase project URL (found in Project Settings > API > Project URL)
-SUPABASE_URL=https:https://ugmgrncvxkeaazzwizki.supabase.co
+SUPABASE_URL=https://ugmgrncvxkeaazzwizki.supabase.co
 
 # Service Role key — server-side ONLY. Never send this to the browser.
 # Found in: Project Settings > API > Project API keys > service_role
