Add ElevenLabs medical assistant guidance for consent and voice tests

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -67,6 +67,10 @@ ELEVENLABS_API_KEY=sk_b65a885752f372296bb85188ebc2114a48fb5f34f9d34635
 # Voice ID to use for TTS — find in ElevenLabs > Voices (e.g., Rachel = 21m00Tcm4TlvDq8ikWAM)
 ELEVENLABS_VOICE_ID=21m00Tcm4TlvDq8ikWAM
 
+# Optional: dedicated voice ID for MEDICAL_ASSISTANT mode.
+# If omitted, ELEVENLABS_VOICE_ID is used.
+ELEVENLABS_MEDICAL_ASSISTANT_VOICE_ID=
+
 # Model ID (eleven_multilingual_v2 supports multiple languages)
 ELEVENLABS_MODEL_ID=eleven_multilingual_v2
 
