--- a/backend/supabase/config.toml
+++ b/backend/supabase/config.toml
@@ -47,3 +47,6 @@ verify_jwt = false
 
 [functions.elevenlabs-tts]
 verify_jwt = false
+
+[functions.chatbot]
+verify_jwt = false  # We verify Auth0 JWT manually in the function
