feat: add Vox chat fallback and improve recording UX

--- a/frontend/.env.eg
+++ b/frontend/.env.eg
@@ -23,3 +23,20 @@ VITE_SUPABASE_ANON_KEY=
 
 # App URL (used for Auth0 redirect URIs in production)
 VITE_APP_URL=
+
+# Gemini browser-side settings (prototype/local persistence chat)
+# NOTE: This key is exposed to the browser. For production security, proxy through backend.
+VITE_GEMINI_API_KEY=
+
+# Requested Gemini model (if unavailable for your key, app falls back automatically)
+# Recommended stable option: gemini-2.0-flash
+VITE_GEMINI_MODEL=gemini-2.0-flash
+
+# Optional: Vox tone controls (used in Gemini prompt instructions)
+# Example: "friendly, informative, medically professional, concise"
+VITE_VOX_PERSONALITY=friendly, informative, medically professional
+
+# Optional OpenAI fallback (browser-side, exposed to client bundle)
+# Used only if Gemini requests fail or Gemini key is missing.
+VITE_OPENAI_API_KEY=
+VITE_OPENAI_MODEL=gpt-4o-mini
